@@ -8,6 +8,7 @@ import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.databind.introspect.AnnotatedMember;
 import com.fasterxml.jackson.databind.introspect.JacksonAnnotationIntrospector;
 import com.fasterxml.jackson.databind.json.JsonMapper;
+import com.google.gson.Gson;
 import com.insidious.common.weaver.ClassInfo;
 import com.insidious.common.weaver.DataInfo;
 import com.insidious.common.weaver.EventType;
@@ -76,6 +77,7 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
             ThreadLocal.withInitial(() -> new ByteArrayOutputStream(1_000_000));
     //    private final Set<String> classesToIgnore = new HashSet<>();
     private final Kryo kryo;
+    private final Gson gson;
     private final ObjectMapper objectMapper;
 
     /**
@@ -100,6 +102,12 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
             kryo.register(byte[].class);
             kryo.register(LinkedHashMap.class);
             kryo.register(LinkedHashSet.class);
+            gson = null;
+            objectMapper = null;
+            fstObjectMapper = null;
+        } else if (SERIALIZATION_MODE == SerializationMode.GSON) {
+            gson = new Gson();
+            kryo = null;
             objectMapper = null;
             fstObjectMapper = null;
         } else if (SERIALIZATION_MODE == SerializationMode.JACKSON) {
@@ -115,19 +123,16 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
             jacksonBuilder.defaultDateFormat(df);
             jacksonBuilder.configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false);
             jacksonBuilder.configure(SerializationFeature.FAIL_ON_SELF_REFERENCES, false);
-            jacksonBuilder.configure(SerializationFeature.WRITE_SELF_REFERENCES_AS_NULL, true);
+//            jacksonBuilder.configure(SerializationFeature.WRITE_SELF_REFERENCES_AS_NULL, true);
 
             try {
                 Class<?> hibernateModule = Class.forName("com.fasterxml.jackson.datatype.hibernate5.Hibernate5Module");
                 Module module = (Module) hibernateModule.getDeclaredConstructor()
                         .newInstance();
-                Class<?> featureClass = Class.forName(
-                        "com.fasterxml.jackson.datatype.hibernate5.Hibernate5Module$Feature");
+                Class<?> featureClass = Class.forName("com.fasterxml.jackson.datatype.hibernate5.Hibernate5Module$Feature");
                 Method configureMethod = hibernateModule.getMethod("configure", featureClass, boolean.class);
-                configureMethod.invoke(module, featureClass.getDeclaredField("FORCE_LAZY_LOADING")
-                        .get(null), true);
-                configureMethod.invoke(module, featureClass.getDeclaredField("REPLACE_PERSISTENT_COLLECTIONS")
-                        .get(null), true);
+                configureMethod.invoke(module, featureClass.getDeclaredField("FORCE_LAZY_LOADING").get(null), true);
+                configureMethod.invoke(module, featureClass.getDeclaredField("REPLACE_PERSISTENT_COLLECTIONS").get(null), true);
                 jacksonBuilder.addModule(module);
 //                System.out.println("Loaded hibernate module");
             } catch (ClassNotFoundException | NoSuchMethodException e) {
@@ -148,8 +153,7 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
             try {
                 //checks for presence of this module class, if not present throws exception
                 Class<?> jdk8Module = Class.forName("com.fasterxml.jackson.datatype.jdk8.Jdk8Module");
-                jacksonBuilder.addModule((Module) jdk8Module.getDeclaredConstructor()
-                        .newInstance());
+                jacksonBuilder.addModule((Module) jdk8Module.getDeclaredConstructor().newInstance());
             } catch (ClassNotFoundException e) {
                 // jdk8 module not found
             } catch (InvocationTargetException
@@ -162,8 +166,7 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
 
             try {
                 Class<?> jodaModule = Class.forName("com.fasterxml.jackson.datatype.joda.JodaModule");
-                jacksonBuilder.addModule((Module) jodaModule.getDeclaredConstructor()
-                        .newInstance());
+                jacksonBuilder.addModule((Module) jodaModule.getDeclaredConstructor().newInstance());
 //                System.err.println("Loaded JodaModule");
 
             } catch (ClassNotFoundException e) {
@@ -175,8 +178,25 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
                      | NoSuchMethodException e) {
                 throw new RuntimeException(e);
             }
+
+            try {
+                Class<?> jstJavaTimeModule = Class.forName("com.fasterxml.jackson.datatype.jsr310.JavaTimeModule");
+                objectMapper.registerModule((Module) jstJavaTimeModule.getDeclaredConstructor()
+                        .newInstance());
+            } catch (ClassNotFoundException e) {
+                // Java Time Module Not Found
+//                e.printStackTrace();
+            } catch (InvocationTargetException
+                     | InstantiationException
+                     | IllegalAccessException
+                     | NoSuchMethodException e) {
+                throw new RuntimeException(e);
+            }
+
+
             objectMapper = jacksonBuilder.build();
             kryo = null;
+            gson = null;
             fstObjectMapper = null;
         } else if (SERIALIZATION_MODE == SerializationMode.FST) {
 
@@ -203,10 +223,12 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
 
             fstObjectMapper = defaultConfigMapper;
             kryo = null;
+            gson = null;
             objectMapper = null;
         } else {
             fstObjectMapper = null;
             kryo = null;
+            gson = null;
             objectMapper = null;
         }
 
@@ -305,6 +327,16 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
                 ) {
 //                    System.err.println("Removing probe: " + dataId);
                     probesToRecord.remove(dataId);
+                } else if (SERIALIZATION_MODE == SerializationMode.GSON) {
+                    // # using gson
+                    String jsonValue = gson.toJson(value);
+                    bytes = jsonValue.getBytes();
+                    if (DEBUG) {
+                        System.err.println(
+                                "[" + dataId + "] record serialized value for probe [" + value.getClass() + "] [" + objectId + "] ->" +
+                                        " " + jsonValue);
+                    }
+                    // ######################################
                 } else if (SERIALIZATION_MODE == SerializationMode.JACKSON) {
 //                    System.err.println("To serialize class: " + className);
                     // # using gson
